--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -1,33 +1,35 @@
-.WeatherInfo h2 {
-  padding: 2px;
-  margin: 0;
-  font-size: 40px;
+.WeatherInfo .weather-info__city-name {
+  margin: 0.75rem 1rem;
+  font-size: 2.5rem;
   font-weight: 400;
 }
 
-.WeatherInfo h3 {
+.WeatherInfo .weather-info__date {
   font-weight: 500;
-  font-size: 20px;
-  margin: 5px auto 20px auto;
+  font-size: 1.5rem;
 }
 
-.WeatherInfo sup {
+.WeatherInfo .weather-info__temperature {
+  font-size: 3.75rem;
+  margin: 1rem 1rem;
+}
+
+.WeatherInfo .weather-info__temperature-units {
   vertical-align: super;
-  font-size: 17px;
+  font-size: 1.3rem;
+}
+.WeatherInfo .weather-info__temperature-units--celsius,
+.WeatherInfo .weather-info__temperature-units--fahrenheint {
+  color: #fff;
+  text-decoration: none;
 }
 
-.WeatherInfo .forecast-image {
-  width: 35px;
+.WeatherInfo .weather-info__description {
+  margin: 1.5rem 1rem;
 }
 
-.WeatherInfo .temperature-number {
-  font-weight: 600;
-  font-size: 42px;
-  padding-top: 15px;
-}
-
-.WeatherInfo img {
-  display: block;
-  margin: 0 auto;
-  width: 120px;
+.WeatherInfo .weather-info__humidity-wind {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-around;
 }
