--- a/src/WeatherTemperature.css
+++ b/src/WeatherTemperature.css
@@ -9,5 +9,6 @@
 }
 .WeatherInfo .weather-info__temperature-units--celsius,
 .WeatherInfo .weather-info__temperature-units--fahrenheint {
-  color: #fff;
+  color: rgba(255, 255, 255, 0.4);
+  text-decoration: none;
 }
