--- a/src/WeatherTemperature.css
+++ b/src/WeatherTemperature.css
@@ -1,6 +1,7 @@
 .WeatherTemperature .weather-info__temperature {
   font-size: 3.75rem;
   margin: 1rem 1rem;
+  font-weight: 600;
 }
 
 .WeatherInfo .weather-info__temperature-units {
